test de conflit

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,35 @@
 *.out
 .DS_Store
 *.swp
+*.o
+//gjwhrerghergeiohgehr*.o
+*.o
+*.o
+*.o
+*.o
+*.o
+*.o
+*.out
+.DS_Store
+*.swp
+*.out
+.DS_Store
+*.swp
+*.out
+.DS_Store
+*.swp
+*.out
+.DS_Store
+*.swp
+*.out
+.DS_Store
+*.swp
+*.out
+.DS_Store
+*.swp
+*.out
+.DS_Store
+*.swp
+*.out
+.DS_Store
+*.swp
